package com.mycloud.service;

import com.mycloud.entity.User;
import com.mycloud.entity.result;

public class AuthService {
    //认证方法，实际项目中应该连接数据库验证用户名和密码
    public result authenticate(String username, String password) {
        return new result(0, "Authentication successful");
    }
    //注册方法，实际项目中应该连接数据库保存用户信息
    public result registerUser(User userInfo) {
        return new result(0, "Registration successful");
    }
    //销毁会话方法，实际项目中应该清除用户的会话信息
    public result destroySession(String token) {
        return new result(0, "Logout successful");
    }
}
